@@ -5,12 +5,12 @@
 #
 
 LIB_SRCS := arc4random.c bsd_getopt.c err.c fgetln.c heapsort.c \
-	    humanize_number.c inet_net_pton.c \
+	    linkaddr.c humanize_number.c inet_net_pton.c \
 	    strlcat.c strlcpy.c md5c.c fmtcheck.c progname.c vis.c unvis.c
 LIB_SRCS := $(patsubst %,src/%,$(LIB_SRCS))
 
 LIB_INCLUDES := bsd/err.h bsd/getopt.h bsd/ip_icmp.h bsd/random.h bsd/queue.h bsd/md5.h bsd/string.h \
-		bsd/bsd.h bsd/cdefs.h bsd/stdlib.h vis.h libutil.h
+		bsd/bsd.h bsd/cdefs.h bsd/stdlib.h bsd/if_dl.h vis.h libutil.h
 
 LIB_MANS := arc4random.3 strlcpy.3 fgetln.3 fmtcheck.3
 LIB_MANS := $(patsubst %,man/%,$(LIB_MANS))
