@@ -9,6 +9,7 @@ LIBBSD_0.0 {
     heapsort;
     humanize_number;
     inet_net_pton;
+    link_addr; link_ntoa;
     getprogname; setprogname;
     strlcpy;
     strlcat;
